# xtensor_pybind11_cmake

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: main.cpp
src/mypackage/: CMakeLists.txt  sum_of_sines.cpp  sum_of_sines.hpp
